@@ -370,8 +370,14 @@ function smarty_modifier_checkbox($string)
  */
 function smarty_modifier_select($string, $value)
 {
+    //    標準に合わせる
+    //    @see http://www.w3.org/TR/html401/interact/forms.html#adef-selected
+    //    @see http://www.w3.org/TR/2000/REC-xhtml1-20000126/DTD/xhtml1-transitional.dtd
+    //    @see http://www.w3.org/TR/2000/REC-xhtml1-20000126/DTD/xhtml1-strict.dtd
+    //    @see http://www.w3.org/TR/2000/REC-xhtml1-20000126/DTD/xhtml1-frameset.dtd
+    //    @see http://www.w3.org/TR/xhtml-modularization/abstract_modules.html#s_sformsmodule
     if ($string == $value) {
-        return 'selected="true"';
+        return 'selected="selected"';
     }
 }
 // }}}
